--- a/style.css
+++ b/style.css
@@ -4,9 +4,9 @@ Theme URI: https://precisethemes.com/wordpress-theme/blogasm/
 Author: Precise Themes
 Author URI: https://precisethemes.com/
 Description: Blogasm is a minimal, elegant, clean and responsive WordPress blog theme with a pleasing design and minimalist color combination to emphasize your blog posts. It can be used for personal, fashion, lifestyle, food, travel, photography, portfolio, technology or any other types of blog sites. Built-in One-click demo importer option helps to get started quickly. View More Details at: https://precisethemes.com/go/blogasm/ and View Demo at: https://precisethemes.com/go/blogasm-demo/
-Version: 1.0.4
+Version: 1.0.5
 License: GNU General Public License v2 or later
-License URI: LICENSE
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: blogasm
 Tags: two-columns, left-sidebar, right-sidebar, custom-menu, custom-logo, featured-images, footer-widgets, theme-options, custom-colors, threaded-comments, translation-ready, blog
 
